Added per-frame caching to hotbarCounts to reduce the maximum number of player inventory iterations from 10 to 1.

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,9 @@
 
 
 Fixes / unfinished:
+- slightly reduce scale of hotbarCounts so that adjacent slots with large numbers do not overlap
 
 Improvements / refinements:
-- cache inventory item counts for display above hotbar
 
 
 Features:
