--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,16 @@
 
 
 Fixes / unfinished:
+- make modmenu respond to cyclebuttonback
+- check if modmenu responds to textfieldclear, fix if not
 - do something better with licence?
+- add translations for modmenu options and tooltips
 
 Improvements / refinements:
 
 
-Features:
+Features (under consideration, maybe maybe not gonna be implemented):
+- display exact durability of tools on-screen when they are held
 - keybind to use item in off hand even if main hand has an action
     - likely implemented as swap-and-use-and-swap-back
     - conflict between block-picking and use-offhand; which button to default to? 3?
