--- a/todo.txt
+++ b/todo.txt
@@ -2,9 +2,12 @@
 
 Fixes / unfinished:
 - do something better with licence?
+- fix mouse break after changing mouse sensitivity
+- add logging
 
 Improvements / refinements:
-
+- add icon near emptySlotCount to make its function more apparent
+- config options to control location of empty slots label
 
 Features (under consideration, maybe maybe not gonna be implemented):
 - display exact durability of tools on-screen when they are held
