Fixed issue with emptySlotCounts hud elt not displaying in the correct position.  Added config to control offset and scale of hotbarCounts.

--- a/todo.txt
+++ b/todo.txt
@@ -2,11 +2,10 @@
 
 Fixes / unfinished:
 - fix license
-- transition to using HudElements for hotbarCounts
 - clean up readme
 - fix commit authorship
 - add boolean button api
-- fix up config access patterns to use events
+- finish lang stuff
 
 Improvements / refinements:
 
